# smartflow

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  Makefile  PROJECT_SUMMARY.md  README.md  pyproject.toml  run_tests.py  setup_dev.py
.github/workflows/: ci.yml
docs/: README.md
examples/: sentiment_analysis.py
smartflow/: __init__.py  callbacks.py  cli.py  config.py  dashboard.py  state.py  step.py  storage.py  substep.py  utils.py  workflow.py
tests/: __init__.py  conftest.py  test_storage.py  test_utils.py
